Changed hover translation to make it smoother

--- a/static/style.css
+++ b/static/style.css
@@ -124,7 +124,7 @@ body {
 .navigation a:hover {
     color: var(--main-prim-color);
     text-decoration: underline;
-    padding: 0px 10px; /* Adjusted padding */
+    transform: translateX(2px);
 
 }
 
