--- a/static/style.css
+++ b/static/style.css
@@ -174,8 +174,8 @@ body {
     width: 250px;
     height: auto;
     margin-top: 90px;
-    margin-right: 50px;
-    margin-left:425px;
+    margin-right: 6vh;
+    margin-left:50vh;
     box-shadow: 0 4px 8px rgba(0, 0, 0, .5); /* Optional: Add some shadow */
 
 }
@@ -185,7 +185,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-right:300px;
+    margin-right:40vh;
 
 }
 
